--- a/JumpingUp/index.html
+++ b/JumpingUp/index.html
@@ -18,6 +18,11 @@
     <!-- Apple Touch Icons -->
     <link rel="apple-touch-icon" href="/icon-192.svg">
 
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
+
     <title>Jumping Up - PWA Game</title>
   </head>
   <body>
